--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
 language: objective-c
-script:
-  - xctool -project CMDQueryStringSerialization.xcodeproj -scheme CMDQueryStringSerialization -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
-  - xctool test -project CMDQueryStringSerialization.xcodeproj -scheme CMDQueryStringSerialization -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+xcode_project: CMDQueryStringSerialization.xcodeproj
+xcode_scheme: CMDQueryStringSerialization
