Switch to actual install script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: objective-c
-before_install: cd Example && pod install && cd -
+install: cd Example && pod install && cd -
 script:
     - xctool -workspace Example/CMDQueryStringSerialization.xcworkspace -scheme Tests -sdk iphonesimulator test
