--- a/CMDQueryStringSerialization.xcodeproj/xcshareddata/xcschemes/CMDQueryStringSerialization.xcscheme
+++ b/CMDQueryStringSerialization.xcodeproj/xcshareddata/xcschemes/CMDQueryStringSerialization.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0500"
+   LastUpgradeVersion = "0630"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,23 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B6EAFA9188F5D78005D2EB4"
-               BuildableName = "Tests.xctest"
-               BlueprintName = "Tests"
+               BlueprintIdentifier = "3BEA1CD81AFB40E40006A6E8"
+               BuildableName = "CMDQueryStringSerialization.framework"
+               BlueprintName = "CMDQueryStringSerialization"
+               ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "3BEA1CE31AFB40E50006A6E8"
+               BuildableName = "CMDQueryStringSerializationTests.xctest"
+               BlueprintName = "CMDQueryStringSerializationTests"
                ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +46,9 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B6EAFA9188F5D78005D2EB4"
-               BuildableName = "Tests.xctest"
-               BlueprintName = "Tests"
+               BlueprintIdentifier = "3BEA1CE31AFB40E50006A6E8"
+               BuildableName = "CMDQueryStringSerializationTests.xctest"
+               BlueprintName = "CMDQueryStringSerializationTests"
                ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -42,9 +56,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B6EAFA9188F5D78005D2EB4"
-            BuildableName = "Tests.xctest"
-            BlueprintName = "Tests"
+            BlueprintIdentifier = "3BEA1CD81AFB40E40006A6E8"
+            BuildableName = "CMDQueryStringSerialization.framework"
+            BlueprintName = "CMDQueryStringSerialization"
             ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -61,9 +75,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B6EAFA9188F5D78005D2EB4"
-            BuildableName = "Tests.xctest"
-            BlueprintName = "Tests"
+            BlueprintIdentifier = "3BEA1CD81AFB40E40006A6E8"
+            BuildableName = "CMDQueryStringSerialization.framework"
+            BlueprintName = "CMDQueryStringSerialization"
             ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -79,9 +93,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B6EAFA9188F5D78005D2EB4"
-            BuildableName = "Tests.xctest"
-            BlueprintName = "Tests"
+            BlueprintIdentifier = "3BEA1CD81AFB40E40006A6E8"
+            BuildableName = "CMDQueryStringSerialization.framework"
+            BlueprintName = "CMDQueryStringSerialization"
             ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
