--- a/CMDQueryStringSerialization.xcodeproj/xcshareddata/xcschemes/watchOS.xcscheme
+++ b/CMDQueryStringSerialization.xcodeproj/xcshareddata/xcschemes/watchOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "368CD4131B3235AF0047923F"
-               BuildableName = "watchOS.framework"
+               BuildableName = "CMDQueryStringSerialization.framework"
                BlueprintName = "watchOS"
                ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "368CD4131B3235AF0047923F"
-            BuildableName = "watchOS.framework"
+            BuildableName = "CMDQueryStringSerialization.framework"
             BlueprintName = "watchOS"
             ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "368CD4131B3235AF0047923F"
-            BuildableName = "watchOS.framework"
+            BuildableName = "CMDQueryStringSerialization.framework"
             BlueprintName = "watchOS"
             ReferencedContainer = "container:CMDQueryStringSerialization.xcodeproj">
          </BuildableReference>
